--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
     "bootstrap": "^4.4.1",
+    "ngx-markdown": "^9.0.0",
     "popper": "^1.0.1",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
